--- a/nifi-timediff-processors/pom.xml
+++ b/nifi-timediff-processors/pom.xml
@@ -50,9 +50,14 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.googlecode.json-simple</groupId>
+            <groupId>com.github.cliftonlabs</groupId>
             <artifactId>json-simple</artifactId>
-            <version>1.1.1</version>
+            <version>3.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.dozer</groupId>
+            <artifactId>dozer</artifactId>
+            <version>5.5.1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
